test/error/parser_files/type_as_binding01.err
File "parser_files/type_as_binding01.st", line 1, characters 3-7:
1 | f type := type.
      ^^^^
Error: Syntax error.
Hint: Is not a correct binding.
